<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.co.sstinc.lsimpledev.MainActivity">

    <group android:id="@+id/group_top_settings">
        <item
            android:id="@+id/action_file_output_settings"
            android:orderInCategory="100"
            android:title="@string/action_file_output_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_server_settings"
            android:orderInCategory="100"
            android:title="@string/action_server_settings"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/group_system_settings">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/group_license">
        <item
            android:id="@+id/action_oss_licenses"
            android:orderInCategory="100"
            android:title="@string/action_oss_licenses"
            app:showAsAction="never" />
    </group>
</menu>