<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileOutputSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/fileSaveSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_switch"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/csvSaveSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/csv_save_enabled" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openDownloadDirectoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:icon="@drawable/ic_open_in_new"
            app:iconSize="24sp"
            app:iconGravity="textStart"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/download_directory_button_label" />

    </LinearLayout>
</ScrollView>
